Lets the user specify the output folder. Some other small fixes.

--- a/wocfetcher/readme
+++ b/wocfetcher/readme
@@ -39,3 +39,6 @@
    - sd
    - iia
    - pgi
+
+   Finally, set the name of the directory where the files will be downloaded
+   to in the last line of the configuration file.
